# ChaReCo

./: .gitignore  ChaReCo.spec  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: ci.yml
chareco/: __init__.py  __main__.py  app.py  cli.py  gui.py
chareco/core/: __init__.py  analysis.py  models.py  search.py  service.py  utils.py
scripts/: build_appimage.sh
tests/: test_gui_logic.py  test_search.py  test_service.py  test_utils.py
