[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "chareco"
dynamic = ["version"]
description = "Create bounded, searchable repository context for LLM chats."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Lukasz Liniewicz", email = "l.liniewicz@gmail.com"}]
dependencies = [
    "PyQt6>=6.6,<7",
    "dulwich>=0.22,<1",
    "tiktoken>=0.7,<1",
    "jupytext>=1.16,<2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
chareco = "chareco.app:main"
chareco-context = "chareco.cli:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.6,<7"]

[project.urls]
Homepage = "https://github.com/lukaszliniewicz/ChaReCo"
Repository = "https://github.com/lukaszliniewicz/ChaReCo"

[tool.setuptools.dynamic]
version = {attr = "chareco.__version__"}

[tool.setuptools.packages.find]
include = ["chareco*"]

[tool.unittest]
start-directory = "tests"
